--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 cffi==1.15.1
 numpy==1.24.2
 pycparser==2.21
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-PyQt5Designer==5.14.1
+pygame==2.3.0
+pygame-textinput==1.0.1
+Pygments==2.15.1
 scipy==1.10.1
 sounddevice==0.4.6
 soundfile==0.12.1
-pygame==2.3.0
-Pygments==2.15.1
